# paoo

./: CMakeLists.txt
headers/: Cartof.hpp  Fruct.hpp  Leguma.hpp  Mar.cpp
src/: Cartof.cpp  Fruct.cpp  Leguma.cpp  Mar.cpp  main.cpp
